Source/JavaScriptCore: Changed JSC to always record line number information so that error.stack and window.onerror() can report proper line numbers. https://bugs.webkit.org/show_bug.cgi?id=89410

Patch by Mark Lam <mark.lam@apple.com> on 2012-06-18
Reviewed by Geoffrey Garen.

* bytecode/CodeBlock.cpp:
(JSC::CodeBlock::CodeBlock):
(JSC::CodeBlock::lineNumberForBytecodeOffset):
(JSC::CodeBlock::shrinkToFit): m_lineInfo is now available unconditionally.

* bytecode/CodeBlock.h:
(JSC::CodeBlock::addLineInfo):
(JSC::CodeBlock::hasLineInfo): Unused.  Now removed.
(JSC::CodeBlock::needsCallReturnIndices):
(CodeBlock):
(RareData):  Hoisted m_lineInfo out of m_rareData.  m_lineInfo is now
filled in unconditionally.

* bytecompiler/BytecodeGenerator.h:
(JSC::BytecodeGenerator::addLineInfo):

LayoutTests: Ensure that error.stack and window.onerror always have the appropriate
line numbers of the exception being thrown.
https://bugs.webkit.org/show_bug.cgi?id=89410

Patch by Mark Lam <mark.lam@apple.com> on 2012-06-18
Reviewed by Geoffrey Garen.

* fast/js/exception-line-number-expected.txt: Added.
* fast/js/exception-line-number.html: Added.
* fast/js/script-tests/exception-line-number.js: Added.
(foo):
(window.onerror):

Canonical link: https://commits.webkit.org/107286@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120676 268f45cc-cd09-0410-ab3c-d52691b4dbfc